--- a/base_model_mesa/rich_model/BatchRun.ipynb
+++ b/base_model_mesa/rich_model/BatchRun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "f3c1ebfc",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Kaninik Baradi\\AppData\\Local\\Temp\\ipykernel_33128\\4051067744.py:94: DeprecationWarning: BatchRunner class has been replaced by batch_run function. Please see documentation.\n",
-      "  batch_run = BatchrunnerExtender(MinimalModel, parameters, max_steps=500)\n",
+      "C:\\Users\\Kaninik\\AppData\\Local\\Temp\\ipykernel_27912\\687171613.py:94: DeprecationWarning: BatchRunner class has been replaced by batch_run function. Please see documentation.\n",
+      "  batch_run = BatchrunnerExtender(MinimalModel, parameters, max_steps=500, model_reporters= model_reporters)\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -525,7 +525,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:03,  3.69s/it]"
+      "1it [00:08,  8.75s/it]"
      ]
     },
     {
@@ -1038,7 +1038,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2it [00:07,  3.55s/it]"
+      "2it [00:16,  8.03s/it]"
      ]
     },
     {
@@ -1551,7 +1551,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "3it [00:10,  3.50s/it]"
+      "3it [00:24,  7.91s/it]"
      ]
     },
     {
@@ -2064,7 +2064,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "4it [00:14,  3.56s/it]"
+      "4it [00:32,  8.09s/it]"
      ]
     },
     {
@@ -2577,7 +2577,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "5it [00:18,  3.65s/it]"
+      "5it [00:42,  8.63s/it]"
      ]
     },
     {
@@ -3090,7 +3090,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "6it [00:21,  3.67s/it]"
+      "6it [00:50,  8.57s/it]"
      ]
     },
     {
@@ -3603,7 +3603,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "7it [00:27,  4.44s/it]"
+      "7it [01:02,  9.84s/it]"
      ]
     },
     {
@@ -4116,7 +4116,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "8it [00:35,  5.44s/it]"
+      "8it [01:16, 11.09s/it]"
      ]
     },
     {
@@ -4629,20 +4629,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "9it [00:41,  4.64s/it]\n"
+      "9it [01:31, 10.14s/it]\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'BatchrunnerExtender' object has no attribute 'model_vars'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_33128\\4051067744.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    100\u001b[0m \u001b[1;34m'run the Batchrunner'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    101\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 102\u001b[1;33m \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbatch_run\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_model_vars_dataframe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    103\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    104\u001b[0m \u001b[1;34m'Collect and analyze the results of the batch run to get the dataframe of the results'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\Kaninik Baradi\\.conda\\envs\\SEN1211\\lib\\site-packages\\mesa\\batchrunner.py\u001b[0m in \u001b[0;36mget_model_vars_dataframe\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    427\u001b[0m         \"\"\"\n\u001b[0;32m    428\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 429\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_prepare_report_table\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel_vars\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    430\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    431\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mget_agent_vars_dataframe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'BatchrunnerExtender' object has no attribute 'model_vars'"
-     ]
+     "data": {
+      "text/plain": "'Collect and analyze the results of the batch run to get the dataframe of the results'"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -4739,7 +4735,7 @@
     "                    model_key\n",
     "                ] = results.get_agent_vars_dataframe('Citizen')\n",
     "\n",
-    "batch_run = BatchrunnerExtender(MinimalModel, parameters, max_steps=500)\n",
+    "batch_run = BatchrunnerExtender(MinimalModel, parameters, max_steps=500, model_reporters= model_reporters)\n",
     "\n",
     "'specifying the model class, the parameter settings, the number of times to run each set of parameters, and the reporters to be tracked'\n",
     "\n",
@@ -4747,7 +4743,6 @@
     "\n",
     "'run the Batchrunner'\n",
     "\n",
-    "results = batch_run.get_model_vars_dataframe()\n",
     "\n",
     "'Collect and analyze the results of the batch run to get the dataframe of the results'\n",
     "\n"
@@ -4755,11 +4750,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bccfbc62",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "results_model = batch_run.datacollector_model_reporters\n",
+    "results_agents = batch_run.datacollector_agent_reporters"
+   ]
   }
  ],
  "metadata": {
